# thatch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/thatch/: __init__.py  config.py  config_util.py  dir_root.py  global_config.py  mem_root.py  old_run.py  root.py  run.py
src/thatch/config/: __init__.py  configurable.py  configure.py  globals.py  util.py
src/thatch/track/: __init__.py  dir_root.py  root.py  run.py
src/thatch/viz/: plot.py  util.py
tests/: test_config.py  test_config_util.py
