[project]
name = "thatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yegor Kuznetsov" }
]
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "pillow>=11.3.0",
    "polars>=1.31.0",
    "psutil>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
]
